# api/openapi.yaml
@@ -124,7 +124,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Accepted"
+                $ref: "#/components/schemas/MessageReceipt"
         "400":
           $ref: "#/components/responses/Problem"
         "404":
@@ -691,11 +691,14 @@ components:
       additionalProperties: false
       required:
         - flowId
+        - messageId
         - callId
         - answers
       properties:
         flowId:
           $ref: "#/components/schemas/FlowId"
+        messageId:
+          $ref: "#/components/schemas/MessageId"
         callId:
           $ref: "#/components/schemas/CallId"
         answers:
