# internal/api/generated/oas_response_encoders_gen.go
@@ -13,7 +13,7 @@ import (
 
 func encodeAnswerQuestionsResponse(response AnswerQuestionsRes, w http.ResponseWriter) error {
 	switch response := response.(type) {
-	case *Accepted:
+	case *MessageReceipt:
 		if err := func() error {
 			if err := response.Validate(); err != nil {
 				return err
