# internal/api/generated/oas_validators_gen.go
@@ -1018,6 +1018,17 @@ func (s *AnswerQuestionsRequest) Validate() error {
 		})
 	}
 	if err := func() error {
+		if err := s.MessageId.Validate(); err != nil {
+			return err
+		}
+		return nil
+	}(); err != nil {
+		failures = append(failures, validate.FieldError{
+			Name:  "messageId",
+			Error: err,
+		})
+	}
+	if err := func() error {
 		if err := s.CallId.Validate(); err != nil {
 			return err
 		}
